finished message logic

--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title is-1">Penguins chat</h1>
-      <h2 class="subtitle is-5">User: {{this.user.getName()}}</h2>
+      <h2 class="subtitle is-5">User: {{ thisUser.firstName + ' ' + thisUser.lastName }}</h2>
     </div>
   </div>
 </section>
